fix: prompter size, footer gap, underline adaptive

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -21,8 +21,8 @@
 .icons {
     display: flex;
     align-items: center;
-    gap: 10px;
-    font-size: 22px;
+    gap: 20px;
+    font-size: 25px;
 }
 
 .icon:hover  {
