--- a/app/components/Prompter/Prompter.module.css
+++ b/app/components/Prompter/Prompter.module.css
@@ -22,9 +22,9 @@
     align-items: center;
     gap: 72px;
     border: 2px solid;
-    padding: 25px;
+    padding: 10px 30px;
     border-radius: 8px;
     width: 760px;
-    box-shadow:0px 20px 20px 0 rgba(0,0,0,0.15);
+    box-shadow: 0px 20px 20px 0 rgba(0,0,0,0.15);
     background-color: #FFF;
 }
